--- a/src/components/devtools/GridOverlay.scss
+++ b/src/components/devtools/GridOverlay.scss
@@ -28,11 +28,11 @@
     transition: opacity 0.2s;
   }
 
-  &.verticalIsVisible &__container {
+  &.isVerticalVisible &__container {
     opacity: 1;
   }
 
-  &.horizontalIsVisible {
+  &.isHorizontalIsVisible {
     background:
       linear-gradient(to bottom, rgba(0, 0, 0, 0) calc(100% - (1 / var(--grid-baseline-calc) * 100%)), rgba(0, 0, 0, 0.05) calc(100% - (1 / var(--grid-baseline-calc) * 100%))),
       linear-gradient(to bottom, rgba(0, 0, 0, 0) calc(100% - (1 / var(--grid-baseline-calc) * 100%)), rgba(255, 255, 255, 0.15) calc(100% - (1 / var(--grid-baseline-calc) * 100%)));
@@ -126,8 +126,8 @@
     }
 
     // stylelint-disable
-    &.horizontalIsVisible,
-    &.verticalIsVisible {
+    &.isHorizontalIsVisible,
+    &.isVerticalIsVisible {
       g,
       &:hover g {
         fill: #328bf3;
